# python_dev

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
scripts/: 01_start_mcp.sh
src/: __init__.py  config.py  dependencies.py  exception_handlers.py  exceptions.py  main.py  middleware.py
src/endpoints/: echo.py
src/python_dev/: __init__.py
tests/: conftest.py  test_echo.py  test_init.py  test_main.py
